--- a/MVCTravelBookingISE/Areas/Identity/Pages/Account/Login.cshtml
+++ b/MVCTravelBookingISE/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,6 +5,10 @@
 
    
 }
+<head>
+   <link rel="stylesheet" href="~/css/site.css" />
+
+</head>
 
 <h1>@ViewData["Title"]</h1>
 
@@ -17,7 +21,7 @@
                    <div class="card-body p-5">
                       
                     <div class="text-center">
-                        <img src=""
+                        <img src="~/img/A letter Logo design(2).png"
                              style="width: 185px;" alt="logo">
                         <h4 class="mt-1 mb-5 pb-1">Unlimited Travels Login</h4>
                     </div>
@@ -46,10 +50,7 @@
                 
                     <button id="login-submit" type="submit" class="w-100 btn btn-lg btn-primary">Log in</button>
                 <hr class="my-4" />
-                 <button class="btn btn-lg btn-block btn-primary" style="background-color: #dd4b39;"
-                  type="submit"><i class="fab fa-google me-2"></i> Sign in with google</button>
-                <button class="btn btn-lg btn-block btn-primary mb-2" style="background-color: #3b5998;"
-                  type="submit"><i class="fab fa-facebook-f me-2"></i>Sign in with facebook</button>
+                                
                 <div>
                     <p>
                         <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
