--- a/MVCTravelBookingISE/Areas/Identity/Pages/Account/Register.cshtml
+++ b/MVCTravelBookingISE/Areas/Identity/Pages/Account/Register.cshtml
@@ -10,16 +10,16 @@
 <!-- Section: Design Block -->
 <section class="">  
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        <div class="px-4 py-5 px-md-5 text-center text-lg-start" style="background-color: hsl(0, 0%, 96%)">
+        <div class="px-4 py-5 px-md-5 text-center text-lg-start" style="background-color: white">
              <div class="container">
                 <div class="row gx-lg-5 align-items-center">
                     <div class="col-lg-6 mb-5 mb-lg-0">
-
+                        <img  class="align-items-center"src="~/img/A letter Logo design(2).png" style="width:150px" />
                         <h1 class="my-5 display-3 fw-bold ls-tight">
-                            The best and easy <br />
-                            <span class="text-primary">flights</span>
+                            Unlimited Travels <br />
+                        
                         </h1>
-                        <p style="color: hsl(217, 10%, 50.8%)">
+                        <p style="color:black">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.
                             Eveniet, itaque accusantium odio, soluta, corrupti aliquam
                             quibusdam tempora at cupiditate quis eum maiores libero
@@ -70,33 +70,17 @@
                                                     </div>
                                                     <!-- Checkbox -->
                                                     <div class="form-check d-flex justify-content-center mb-4">
+                                                             <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
                                                         <label class="form-check-label" for="form2Example33">
                                                             Subscribe to our newsletter
                                                         </label>
-                                                        <input class="form-check-input me-2" type="checkbox" value="" id="form2Example33" checked />
+                                                     
                                                       
                                                     </div>
                                                 <button id="registerSubmit" type="submit" class="btn btn-primary btn-block mb-4">Register</button>
                                               
                                                 <!-- Register buttons -->
-                                                <div class="text-center">
-                                                    <p>or sign up with:</p>
-                                                    <button type="button" class="btn btn-link btn-floating mx-1">
-                                                        <i class="fab fa-facebook-f"></i>
-                                                    </button>
-
-                                                    <button type="button" class="btn btn-link btn-floating mx-1">
-                                                        <i class="fab fa-google"></i>
-                                                    </button>
-
-                                                    <button type="button" class="btn btn-link btn-floating mx-1">
-                                                        <i class="fab fa-twitter"></i>
-                                                    </button>
-
-                                                    <button type="button" class="btn btn-link btn-floating mx-1">
-                                                        <i class="fab fa-github"></i>
-                                                    </button>
-                                                 </div>
+                                              
 
                                       </form>
                                    </div>
