--- a/MVCTravelBookingISE/Views/AccomodationModels/Delete.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Delete.cshtml
@@ -4,19 +4,19 @@
     ViewData["Title"] = "Delete Accomodation";
 }
 
-<h1>Delete Accomodation</h1>
 
 <h3>Are you sure you want to delete @Model.Acco_Name ?</h3>
 <div>
-    <h4>AccomodationModel</h4>
+  
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Acco_Name)
+        <dt class="col-sm-2 ">
+            @Html.DisplayNameFor(model => model.Acco_picture)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Acco_Name)
+        <dd class="col-sm-10">
+            <img class="img-thumbnail" style="width:400px; height:300px;" src=" @Html.DisplayFor(model => model.Acco_picture)" />
         </dd>
+       
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Acco_Destination)
         </dt>
