--- a/MVCTravelBookingISE/Views/AccomodationModels/Edit.cshtml
+++ b/MVCTravelBookingISE/Views/AccomodationModels/Edit.cshtml
@@ -14,6 +14,12 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Acco_Id" />
             <div class="form-group">
+                <label asp-for="Acco_picture" class="control-label"></label>
+               
+                <input asp-for="Acco_picture" class="form-control" />
+                <span asp-validation-for="Acco_picture" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Acco_Name" class="control-label"></label>
                 <input asp-for="Acco_Name" class="form-control" />
                 <span asp-validation-for="Acco_Name" class="text-danger"></span>
@@ -22,6 +28,11 @@
                 <label asp-for="Acco_Destination" class="control-label"></label>
                 <input asp-for="Acco_Destination" class="form-control" />
                 <span asp-validation-for="Acco_Destination" class="text-danger"></span>
+            </div>
+             <div class="form-group">
+                <label asp-for="Acco_Rules" class="control-label"></label>
+                <input asp-for="Acco_Rules" class="form-control" />
+                <span asp-validation-for="Acco_Rules" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Acco_Rooms" class="control-label"></label>
