--- a/MVCTravelBookingISE/Views/BookingModels/Details.cshtml
+++ b/MVCTravelBookingISE/Views/BookingModels/Details.cshtml
@@ -6,7 +6,8 @@
 
 <h1>Details</h1>
 
-<div>
+<div class="card">
+    <div class="card-body">
     <h4>BookingModel</h4>
     <hr />
     <dl class="row">
@@ -41,6 +42,7 @@
             @Html.DisplayFor(model => model.Transport_Id)
         </dd>
     </dl>
+</div>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Booking_Id">Edit</a> |
